Checkpoint preceding shopping cart

--- a/app/views/caskets/new.html.erb
+++ b/app/views/caskets/new.html.erb
@@ -20,7 +20,7 @@
     <%= f.label :text1 %><br>
     <%= f.text_field :text1 %>
   </div>
-  <%= f.file_field :image1 %>
+  <%= f.file_field :image1, :required => true %>
   <%= f.file_field :image2 %>
   <%= f.file_field :image3 %>
   <%= f.file_field :image4 %>
