--- a/app/views/shopping_carts/show.html.erb
+++ b/app/views/shopping_carts/show.html.erb
@@ -6,3 +6,6 @@
   <div><b>SubTotal:</b><%= number_to_currency @shopping_cart.subtotal %></div>
   <div><b>Taxes:</b><%= number_to_currency @shopping_cart.taxes %></div>
   <div><b>Total:</b><%= number_to_currency @shopping_cart.total %></div>
+</div>
+<br>
+<%= link_to "Checkout", checkout_cart_path %>
