--- a/app/views/shopping_carts/show.html.erb
+++ b/app/views/shopping_carts/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Shopping Cart</h1>
+<!-- <h1>Shopping Cart</h1>
 <%= render :partial => 'shopping_cart_item', :collection => @shopping_cart.shopping_cart_items %>
 <br><br>
 <div>
@@ -8,4 +8,299 @@
   <div><b>Total:</b><%= number_to_currency @shopping_cart.total %></div>
 </div>
 <br>
-<%= link_to "Checkout", checkout_cart_path %>
+<%= link_to "Checkout", checkout_cart_path %> -->
+
+<!DOCTYPE HTML>
+<!--
+	Helios by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Left Sidebar - Helios by HTML5 UP</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.onvisible.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		<link rel="stylesheet" href="css/style2.css" />
+
+
+
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style2.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="left-sidebar">
+
+		<!-- Header -->
+			<div id="header">
+
+				<!-- Inner -->
+					<div class="inner">
+						<header>
+							<h1>Your Cart</h1>
+						</header>
+					</div>
+				
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="/">Home</a></li>
+							
+						<!-- 	<li>
+								<a href="">Dropdown</a>
+								<ul>
+									<li><a href="#">Lorem ipsum dolor</a></li>
+									<li><a href="#">Magna phasellus</a></li>
+									<li><a href="#">Etiam dolore nisl</a></li>
+									<li>
+										<a href="">And a submenu &hellip;</a>
+										<ul>
+											<li><a href="#">Lorem ipsum dolor</a></li>
+											<li><a href="#">Phasellus consequat</a></li>
+											<li><a href="#">Magna phasellus</a></li>
+											<li><a href="#">Etiam dolore nisl</a></li>
+										</ul>
+									</li>
+									<li><a href="#">Veroeros feugiat</a></li>
+								</ul>
+							</li> -->
+
+							<li><a href="store.html">Shop</a></li>
+							<li><a href="right-sidebar.html">Custom Caskets</a></li>
+							<li><a href="no-sidebar.html">Custom Tombstones</a></li>
+							<li><a href="#">Shopping Cart (<%= @shopping_cart.shopping_cart_items.count %> items)</a></li>
+						</ul>
+					</nav>
+
+			</div>
+			
+		<!-- Main -->
+			<div class="wrapper style1" style="position: relative;
+		background-image: url('../images/header.jpg');
+		background-size: cover;
+		background-position: center center;
+		background-attachment: fixed;
+		text-align: center;
+		padding: 2.5em 0 2em 0;
+		margin-bottom: -5em;
+		cursor: default;">
+
+				<div class="container"  style="margin-left: auto; margin-right: auto; width:70%; background: #ededed; box-shadow: 0px 2px 15px #888888; border-radius: 0.4em;  height: 25em; overflow: scroll;">
+					<div class="row triple">
+						<section class="8u">	
+							<ul class="divided" style="padding-left: 4em;">
+								<!-- <li>2 Awesome Flowers<span style="color: rgba(128,128,128,0.75); font-size: 0.8em;">
+									<br>$13.99</span> <a href="" style="font-size: 0.8em; margin-left:1em">Remove</a>
+								</li>
+
+								<li>1 Extraordinary Bracelet<span style="color: rgba(128,128,128,0.75); font-size: 0.8em;">
+									<br>$43.99</span> <a href="" style="font-size: 0.8em; margin-left:1em">Remove</a>
+								</li>
+
+								<li>1 Amazing Gift Basket<span style="color: rgba(128,128,128,0.75); font-size: 0.8em;">
+									<br>$20.99</span> <a href="" style="font-size: 0.8em; margin-left:1em">Remove</a>
+								</li>
+								<li>2 Awesome Flowers<span style="color: rgba(128,128,128,0.75); font-size: 0.8em;">
+									<br>$13.99</span> <a href="" style="font-size: 0.8em; margin-left:1em">Remove</a>
+								</li>
+
+								<li>1 Extraordinary Bracelet<span style="color: rgba(128,128,128,0.75); font-size: 0.8em;">
+									<br>$43.99</span> <a href="" style="font-size: 0.8em; margin-left:1em">Remove</a>
+								</li>
+
+								<li>1 Amazing Gift Basket<span style="color: rgba(128,128,128,0.75); font-size: 0.8em;">
+									<br>$20.99</span> <a href="" style="font-size: 0.8em; margin-left:1em">Remove</a>
+								</li>
+
+
+ -->							
+ 								<%= render :partial => 'shopping_cart_item', :collection => @shopping_cart.shopping_cart_items %>
+
+ 								<% if @shopping_cart.shopping_cart_items.empty? %>
+ 								<li>Shopping Cart is Empty</li>
+ 								<% end %>
+ 							</ul>
+
+						</section>	
+							
+
+						<section >
+
+							<h3 style="padding-top:4em">Sub-Total: <%= number_to_currency @shopping_cart.subtotal %></h3>
+							<h3>Tax: <%= number_to_currency @shopping_cart.taxes %></h3>
+							<h3 style="padding-bottom:2em">Total: <%= number_to_currency @shopping_cart.total %></h3>
+
+							<ul>
+								<li>
+									<%= link_to "Clear Cart", clear_cart_path, class: 'button' %>
+								</li>
+
+								<li style="padding-top:1em">
+									<%= link_to "Checkout", checkout_cart_path, class: 'button' %>
+								</li>
+							</ul>	
+						</section>
+					</div>
+				</div>
+			</div>
+
+		<!-- Footer -->
+<!-- 			<div id="footer">
+				<div class="container">
+					<div class="row"> -->
+						
+						<!-- Tweets -->
+							<!-- <section class="4u">
+								<header>
+									<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
+								</header>
+								<ul class="divided">
+									<li>
+										<article class="tweet">
+											Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
+											<span class="timestamp">5 minutes ago</span>
+										</article>
+									</li>
+									<li>
+										<article class="tweet">
+											Hendrerit rutrum quisque.
+											<span class="timestamp">30 minutes ago</span>
+										</article>
+									</li>
+									<li>
+										<article class="tweet">
+											Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
+											<span class="timestamp">3 hours ago</span>
+										</article>
+									</li>
+									<li>
+										<article class="tweet">
+											Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
+											<span class="timestamp">5 hours ago</span>
+										</article>
+									</li>
+								</ul>
+							</section>
+ -->
+						<!-- Posts -->
+<!-- 							<section class="4u">
+								<header>
+									<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
+								</header>
+								<ul class="divided">
+									<li>
+										<article class="post stub">
+											<header>
+												<h3><a href="#">Nisl fermentum integer</a></h3>
+											</header>
+											<span class="timestamp">3 hours ago</span>
+										</article>
+									</li>
+									<li>
+										<article class="post stub">
+											<header>
+												<h3><a href="#">Phasellus portitor lorem</a></h3>
+											</header>
+											<span class="timestamp">6 hours ago</span>
+										</article>
+									</li>
+									<li>
+										<article class="post stub">
+											<header>
+												<h3><a href="#">Magna tempus consequat</a></h3>
+											</header>
+											<span class="timestamp">Yesterday</span>
+										</article>
+									</li>
+									<li>
+										<article class="post stub">
+											<header>
+												<h3><a href="#">Feugiat lorem ipsum</a></h3>
+											</header>
+											<span class="timestamp">2 days ago</span>
+										</article>
+									</li>
+								</ul>
+							</section> -->
+
+						<!-- Photos -->
+							<!-- <section class="4u">
+								<header>
+									<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
+								</header>
+								<div class="row quarter no-collapse">
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+									</div>
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+									</div>
+								</div>
+								<div class="row quarter no-collapse">
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+									</div>
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+									</div>
+								</div>
+								<div class="row quarter no-collapse">
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+									</div>
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
+									</div>
+								</div>
+							</section> -->
+
+<!-- 					</div>
+					<hr />
+					<div class="row">
+						<div class="12u"> -->
+							
+							<!-- Contact -->
+								<!-- <section class="contact">
+									<header>
+										<h3>Nisl turpis nascetur interdum?</h3>
+									</header>
+									<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+									</ul>
+								</section>
+							 -->
+							<!-- Copyright -->
+<!-- 								<div class="copyright">
+									<ul class="menu">
+										<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									</ul>
+								</div>
+
+							
+						</div>
+					
+					</div>
+				</div>
+			</div> -->
+
+	</body>
+</html>
