--- a/app/views/static_demo/store.html.erb
+++ b/app/views/static_demo/store.html.erb
@@ -113,13 +113,13 @@
 					<div class="row double">
 						<div id="navcontainer" style="margin-top:-2.5em; width: 90%; padding-left: 10%;" >
 							<ul>
-								<li><a href="#">Flowers</a></li>
-								<li><a href="#">Gift Baskets</a></li>
-								<li><a href="#">Picture Frames</a></li>
-								<li><a href="#">Jewelry</a></li>
-								<li><a href="#">Sympathy Flowers</a></li>
-								<li><a href="#">Cemetery Flowers</a></li>
-								<li><a href="#">Memorial Gifts</a></li>
+								<li><a href="?category=flowers">Flowers</a></li>
+								<li><a href="?category=gift_baskets">Gift Baskets</a></li>
+								<li><a href="?category=picture_frames">Picture Frames</a></li>
+								<li><a href="?category=jewelry">Jewelry</a></li>
+								<li><a href="?category=sympathy_flowers">Sympathy Flowers</a></li>
+								<li><a href="?category=cametery_flowers">Cemetery Flowers</a></li>
+								<li><a href="?category=memorial_gifts">Memorial Gifts</a></li>
 
 							</ul>
 					
