Casket Dragdrop engine

--- a/app/views/static_demo/home.html.erb
+++ b/app/views/static_demo/home.html.erb
@@ -69,7 +69,7 @@
 							<img src="/images/logo-ulow-res.png">
 							<h1><a href="/" id="logo">From The Heart Memorial</a></h1>
 							<hr />
-							<p>Offering you the greatest funeral services around.</p>
+							<p>Offering you the finest funeral services around.</p>
 						</header>
 						<footer>
 							<a href="#banner" class="button circled scrolly">Start</a>
@@ -112,10 +112,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>Summarization Here.......</h2>
+					<h2>FTH Shop</h2>
 					<p>
-						Semper elementum ullamcorper lacinia 
-						natoque aenean scelerisque.
+						A variety of products for funerals of all types.
 					</p>
 				</header>
 			</section>
@@ -125,7 +124,7 @@
 				<div class="reel">
 
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic01.jpg" alt="" /></a>
+						<a href="/store?category=flowers" class="image featured"><img src="/images/roses.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">Flowers</a></h3>
 						</header>
@@ -133,7 +132,7 @@
 					</article>
 				
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic02.jpg" alt="" /></a>
+						<a href="/store?category=picture_frames" class="image featured"><img src="/images/frame.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">Picture Frames</a></h3>
 						</header>
@@ -141,7 +140,7 @@
 					</article>
 				
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic03.jpg" alt="" /></a>
+						<a href="/store?category=gift_baskets" class="image featured"><img src="/images/gift_basket.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">Gift Baskets & Food</a></h3>
 						</header>
@@ -149,7 +148,7 @@
 					</article>
 				
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic04.jpg" alt="" /></a>
+						<a href="/store?category=jewelry" class="image featured"><img src="/images/jewelry.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">Memorial Jewelry</a></h3>
 						</header>
@@ -157,7 +156,7 @@
 					</article>
 				
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic05.jpg" alt="" /></a>
+						<a href="/store?category=symapthy_flowers" class="image featured"><img src="/images/sympathy.jpeg" alt="" /></a>
 						<header>
 							<h3><a href="#">Sympathy Flowers</a></h3>
 						</header>
@@ -165,7 +164,7 @@
 					</article>
 
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic01.jpg" alt="" /></a>
+						<a href="/store?category=cemetery_flowers" class="image featured"><img src="/images/cemetery.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">Cemetery Flowers</a></h3>
 						</header>
@@ -173,20 +172,14 @@
 					</article>
 				
 					<article>
-						<a href="#" class="image featured"><img src="/images/pic02.jpg" alt="" /></a>
+						<a href="/store?category=memorial_gifts" class="image featured"><img src="/images/memorial.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">Memorial Gifts</a></h3>
 						</header>
 						<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>							
 					</article>
 				
-					<article>
-						<a href="#" class="image featured"><img src="/images/pic03.jpg" alt="" /></a>
-						<header>
-							<h3><a href="#">Books</a></h3>
-						</header>
-						<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>							
-					</article>
+					
 				</div>
 			</section>
 			
@@ -224,14 +217,15 @@
 				
 				<section id="features" class="container special">
 					<header>
-						<h2>Morbi ullamcorper et varius leo lacus</h2>
-						<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+						<h2>Custom Products</h2>
+						<p>You design it, we build it. It's that simple.</p>
 					</header>
 					<div class="row">
-						<article class="4u special">
-							<a href="#" class="image featured"><img src="/images/pic07.jpg" alt="" /></a>
+
+						<article class="4u -2u special">
+							<a href="#" class="image featured"><img src="/images/casket.jpg" alt="" /></a>
 							<header>
-								<h3>Gravida aliquam penatibus</h3>
+								<h3>Custom Caskets</h3>
 							</header>
 							<p>
 								Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -239,25 +233,16 @@
 							</p>
 						</article>
 						<article class="4u special">
-							<a href="#" class="image featured"><img src="/images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="/images/tombstone.jpg" alt="" /></a>
 							<header>
-								<h3>Sed quis rhoncus placerat</h3>
+								<h3>Custom Tombstones</h3>
 							</header>
 							<p>
 								Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
 								porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
 							</p>
 						</article>
-						<article class="4u special">
-							<a href="#" class="image featured"><img src="/images/pic09.jpg" alt="" /></a>
-							<header>
-								<h3>Magna laoreet et aliquam</h3>
-							</header>
-							<p>
-								Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-								porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-							</p>
-						</article>
+						
 					</div>
 				</section>
 
@@ -265,125 +250,16 @@
 
 		<!-- Footer -->
 			<div id="footer">
-				<div class="container">
-					<div class="row">
-						
-						<!-- Tweets -->
-							<section class="4u">
-								<header>
-									<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
-								</header>
-								<ul class="divided">
-									<li>
-										<article class="tweet">
-											Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-											<span class="timestamp">5 minutes ago</span>
-										</article>
-									</li>
-									<li>
-										<article class="tweet">
-											Hendrerit rutrum quisque.
-											<span class="timestamp">30 minutes ago</span>
-										</article>
-									</li>
-									<li>
-										<article class="tweet">
-											Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
-											<span class="timestamp">3 hours ago</span>
-										</article>
-									</li>
-									<li>
-										<article class="tweet">
-											Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
-											<span class="timestamp">5 hours ago</span>
-										</article>
-									</li>
-								</ul>
-							</section>
-
-						<!-- Posts -->
-							<section class="4u">
-								<header>
-									<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
-								</header>
-								<ul class="divided">
-									<li>
-										<article class="post stub">
-											<header>
-												<h3><a href="#">Nisl fermentum integer</a></h3>
-											</header>
-											<span class="timestamp">3 hours ago</span>
-										</article>
-									</li>
-									<li>
-										<article class="post stub">
-											<header>
-												<h3><a href="#">Phasellus portitor lorem</a></h3>
-											</header>
-											<span class="timestamp">6 hours ago</span>
-										</article>
-									</li>
-									<li>
-										<article class="post stub">
-											<header>
-												<h3><a href="#">Magna tempus consequat</a></h3>
-											</header>
-											<span class="timestamp">Yesterday</span>
-										</article>
-									</li>
-									<li>
-										<article class="post stub">
-											<header>
-												<h3><a href="#">Feugiat lorem ipsum</a></h3>
-											</header>
-											<span class="timestamp">2 days ago</span>
-										</article>
-									</li>
-								</ul>
-							</section>
-
-						<!-- Photos -->
-							<section class="4u">
-								<header>
-									<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
-								</header>
-								<div class="row quarter no-collapse">
-									<div class="6u">
-										<a href="#" class="image fit"><img src="/images/pic10.jpg" alt="" /></a>
-									</div>
-									<div class="6u">
-										<a href="#" class="image fit"><img src="/images/pic11.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div class="row quarter no-collapse">
-									<div class="6u">
-										<a href="#" class="image fit"><img src="/images/pic12.jpg" alt="" /></a>
-									</div>
-									<div class="6u">
-										<a href="#" class="image fit"><img src="/images/pic13.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div class="row quarter no-collapse">
-									<div class="6u">
-										<a href="#" class="image fit"><img src="/images/pic14.jpg" alt="" /></a>
-									</div>
-									<div class="6u">
-										<a href="#" class="image fit"><img src="/images/pic15.jpg" alt="" /></a>
-									</div>
-								</div>
-							</section>
-
-					</div>
-					<hr />
+				
 					<div class="row">
 						<div class="12u">
 							
 							<!-- Contact -->
 								<section class="contact">
 									<header>
-										<h3>Nisl turpis nascetur interdum?</h3>
+										<h3>Like what you see?</h3>
 									</header>
-									<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+									<p>Follow us on Social Media.</p>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -397,7 +273,7 @@
 							<!-- Copyright -->
 								<div class="copyright">
 									<ul class="menu">
-										<li>&copy; Untitled. All rights reserved.</li><li>Designed by Obsidian Developers</a></li>
+										<li>&copy; FTH Memorial. All rights reserved.</li><li>Designed by Obsidian Developers</a></li>
 									</ul>
 								</div>
 							
