--- a/app/views/static_demo/home.html.erb
+++ b/app/views/static_demo/home.html.erb
@@ -101,7 +101,7 @@
 							</li> -->
 
 							<li><a href="/store">Shop</a></li>
-							<li class="tooltips"><!--<a href="right-sidebar.html">-->Custom Caskets<span>Coming Soon</span></a></li>
+							<li><a href="/caskets/new">Custom Caskets</a></li>
 							<li class="tooltips"><!--<a href="no-sidebar.html">-->Custom Tombstones<span>Coming Soon</span></a></li>
 							<li><a href="/shopping_cart">Shopping Cart (<%= @shopping_cart.shopping_cart_items.count %> items)</a></li>
 						</ul>
@@ -223,7 +223,7 @@
 					<div class="row">
 
 						<article class="4u -2u special">
-							<a href="#" class="image featured"><img src="/images/casket.jpg" alt="" /></a>
+							<a href="/caskets/new" class="image featured"><img src="/images/casket.jpg" alt="" /></a>
 							<header>
 								<h3>Custom Caskets</h3>
 							</header>
