--- a/app/views/static_demo/store.html.erb
+++ b/app/views/static_demo/store.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>From the Heart Memorial</title>
+		<title>Store | From the Heart Memorial</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -99,7 +99,7 @@
 							</li> -->
 
 							<li><a href="store.html">Shop</a></li>
-							<li class="tooltips"><!--<a href="right-sidebar.html">-->Custom Caskets<span>Coming Soon</span></a></li>
+							<li class="tooltips"><a href="/caskets/new">Custom Caskets</a></li>
 							<li class="tooltips"><!--<a href="no-sidebar.html">-->Custom Tombstones<span>Coming Soon</span></a></li>
 							<li><a href="/shopping_cart">Shopping Cart (<%= @shopping_cart.shopping_cart_items.count %> items)</a></li>
 						</ul>
