--- a/app/views/caskets/new.html.erb
+++ b/app/views/caskets/new.html.erb
@@ -40,38 +40,75 @@
       text-align: center;
     }
     .header_input {
-      width: 200px;
+      width: 900px;
       color: #52575c;
       background-color:#f3f4f5;
       text-align: center;
-      font-size: 20px;
+      font-size: 25px;
       margin: 10px;
     }
+
+    ::-webkit-input-placeholder { /* WebKit browsers */
+        color:    #222;
+    }
+    :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+       color:    #222;
+       opacity:  1;
+    }
+    ::-moz-placeholder { /* Mozilla Firefox 19+ */
+       color:    #222;
+       opacity:  1;
+    }
+    :-ms-input-placeholder { /* Internet Explorer 10+ */
+       color:    #222;
+    }
+
+    #casket {
+        background-image:url('/img/caskettop.jpg'); 
+        background-repeat:no-repeat; 
+        width:66em; 
+        height:22em; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover; 
+        background-size: cover;
+
+        /* border radius*/
+        border-radius: 9px;
+        -webkit-border-radius: 9px;
+        -moz-border-radius: 9px;
+
+        /* box shadow */
+        box-shadow: 0px 0px 16px rgba(0,0,0,0.35);
+        -webkit-box-shadow: 0px 0px 16px rgba(0,0,0,0.35);
+        -moz-box-shadow: 0px 0px 16px rgba(0,0,0,0.35);
+    }
+
   </style>
   <script type="text/javascript" src="/js/dragdrop.js"></script>
   <script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
 <body style="background-color: rgb(255, 255, 255); font-family:'Source Sans Pro', sans-serif">
-  <div class="row">
+ <!--  <div class="row">
     <h1>Custom Casket</h1>
-  </div>
-  <div class="row">
-    <div class="eight columns" style="background-image:url('/img/caskettop.jpg'); background-repeat:no-repeat;">
+  </div> -->
+  <div class="row" style="margin-top:5em">
+    <div class="two columns" id="casket">
       <div class="row">
-        <div class="twelve columns" id="casket_template" style="margin-top:50px;">
+        <div class="twelve columns" id="casket_template" style="margin-top:65px;">
           <div class="row">
             <div class="twelve columns">
               <div id="div_header" style="text-align:center;"> 
-                <input type="text" class="header_input" id="header_text" placeholder="Header Text">
+                <input type="text" class="header_input" id="header_text" placeholder="Header Text" style="border: 0; background: transparent; color:#222">
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="twelve columns">
+            <div class="twelve columns" style="margin-left:4.2em">
               <div class="row" id="div_img_holders">
                 <div class="two columns" style="margin-right:15px;">
                   <div id="div_date1" style="text-align:center;">
-                    <input class="date_input" type="text" id="img_holder1_text" placeholder="1900">
+                    <input class="date_input" type="text" id="img_holder1_text" placeholder="1900" style="border: 0; background: transparent; color:#222; margin-right:3.7em">
                   </div>
                   <div style="background:url('/img/frame5.png') no-repeat; height:110px; width:110px; margin-top:28px;">
                     <div id="img_holder1" ondrop="switch_drop1(event)" ondragover="allowDrop(event)" style="margin-top:11px; margin-left:14px; height:66px; width:78px;"></div>
@@ -79,7 +116,7 @@
                 </div>
                 <div class="two columns" style="margin-right:15px;">
                   <div id="div_date2" style="text-align:center;">
-                    <input class="date_input" type="text" id="img_holder2_text" placeholder="1901">
+                    <input class="date_input" type="text" id="img_holder2_text" placeholder="1901" style="border: 0; background: transparent; color:#222; margin-right:3.7em">
                   </div>
                   <div style="background:url('/img/frame2.png') no-repeat; height:110px; width:110px;">
                     <div id="img_holder2" ondrop="switch_drop2(event)" ondragover="allowDrop(event)" style="margin-top:18px; margin-left:20px; height:68px; width:68px; border-radius:50%;"></div>
@@ -87,7 +124,7 @@
                 </div>
                 <div class="two columns" style="margin-right:15px;">
                   <div id="div_date3" style="text-align:center;">
-                    <input class="date_input" type="text" id="img_holder3_text" placeholder="1902">
+                    <input class="date_input" type="text" id="img_holder3_text" placeholder="1902" style="border: 0; background: transparent; color:#222; margin-right:4.4em">
                   </div>
                   <div style="background:url('/img/frame3.png') no-repeat; height:110px; width:110px;">  
                     <div id="img_holder3" ondrop="switch_drop3(event)" ondragover="allowDrop(event)" style="margin-top:18px; margin-left:22px; height:63px; width:54px;"></div>
@@ -95,7 +132,7 @@
                 </div>
                 <div class="two columns" style="margin-right:15px;">
                   <div id="div_date4" style="text-align:center;">
-                    <input class="date_input" type="text" id="img_holder4_text" placeholder="1903">
+                    <input class="date_input" type="text" id="img_holder4_text" placeholder="1903" style="border: 0; background: transparent; color:#222; margin-right:4.4em">
                   </div>
                   <div style="background:url('/img/frame4.png') no-repeat; height:110px; width:110px;">
                     <div id="img_holder4" ondrop="switch_drop4(event)" ondragover="allowDrop(event)" style="margin-top:17px; margin-left:17px; height:67px; width:67px; border-radius:50%;"></div>
@@ -103,7 +140,7 @@
                 </div>
                 <div class="two columns" style="margin-right:15px;">
                   <div id="div_date5" style="text-align:center;">
-                    <input class="date_input" type="text" id="img_holder5_text" placeholder="1904">
+                    <input class="date_input" type="text" id="img_holder5_text" placeholder="1904" style="border: 0; background: transparent; color:#222; margin-right:3.7em">
                   </div>
                   <div style="background:url('/img/frame5.png') no-repeat; height:110px; width:110px; margin-top:28px;">
                     <div id="img_holder5" ondrop="switch_drop5(event)" ondragover="allowDrop(event)" style="margin-top:11px; margin-left:14px; height:66px; width:78px;"></div>
@@ -114,8 +151,8 @@
           </div>
         </div>
       </div>
-      <div class="row" style="margin-top:100px;">
-        <div class="twelve columns" id="images" ondrop="drop0(event)" ondragover="allowDrop(event)" style="margin-top:15px; height:300px;">
+      <div class="row" style="margin-top:200px;">
+        <div class="twelve columns" id="images" ondrop="drop0(event)" ondragover="allowDrop(event)" style="margin-top:55px; height:300px;">
         <h1 hidden="true">Hidden</h1>     
         </div>
       </div>
