--- a/app/views/caskets/new.html.erb
+++ b/app/views/caskets/new.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -106,31 +107,31 @@
         <input class="input" id="header_field" name="casket[header1]" hidden="true" value="">
         <br>
         <div id="div_img1" class="input_div">
-          <%= f.file_field :image1, :id => 'img_input1', :onchange => 'imgchange("confirm_img1")' %>
+          <%= f.file_field :image1, :id => 'img_input1', :onClick => 'imgchange("confirm_img1")' %>
           <input class="input" id="img1_field" name="casket[locale_1]" hidden="true" value="">
           <button id="confirm_img1" hidden="true" onClick="confirm_img_one()">Confirm</button>
         </div>
         <br>
         <div id="div_img2" class="input_div">
-          <%= f.file_field :image2, :id => 'img_input2', :onchange => 'imgchange("confirm_img2")' %>
+          <%= f.file_field :image2, :id => 'img_input2', :onClick => 'imgchange("confirm_img2")' %>
           <input class="input" id="img2_field" name="casket[locale_2]" hidden="true" value="">
           <button id="confirm_img2" hidden="true" onClick="confirm_img_two()">Confirm</button>
         </div>
         <br>
         <div id="div_img3" class="input_div">
-          <%= f.file_field :image3, :id => 'img_input3', :onchange => 'imgchange("confirm_img3")' %>
+          <%= f.file_field :image3, :id => 'img_input3', :onClick => 'imgchange("confirm_img3")' %>
           <input class="input" id="img3_field" name="casket[locale_3]" hidden="true" value="">
           <button id="confirm_img3" hidden="true" onClick="confirm_img_three()">Confirm</button>
         </div>
         <br>
         <div id="div_img4" class="input_div">
-          <%= f.file_field :image4, :id => 'img_input4', :onchange => 'imgchange("confirm_img4")' %>
+          <%= f.file_field :image4, :id => 'img_input4', :onClick => 'imgchange("confirm_img4")' %>
           <input class="input" id="img4_field" name="casket[locale_4]" hidden="true" value="">
           <button id="confirm_img4" hidden="true" onClick="confirm_img_four()">Confirm</button>
         </div>
         <br>
         <div id="div_img5" class="input_div">
-          <%= f.file_field :image5, :id => 'img_input5', :onchange => 'imgchange("confirm_img5")' %>
+          <%= f.file_field :image5, :id => 'img_input5', :onClick => 'imgchange("confirm_img5")' %>
           <input class="input" id="img5_field" name="casket[locale_5]" hidden="true" value="">
           <button id="confirm_img5" hidden="true" onClick="confirm_img_five()">Confirm</button>
         </div>
