--- a/app/views/caskets/new.html.erb
+++ b/app/views/caskets/new.html.erb
@@ -94,7 +94,8 @@
   <script type="text/javascript" src="/js/dragdrop.js"></script>
   <script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
-<body style="background-color: rgb(255, 255, 255); font-family:'Source Sans Pro', sans-serif">
+<body style="background-img:; font-family:'Source Sans Pro', sans-serif">
+  <iframe src="/casket_maker" style="width:100%; height:4.7em;" frameborder="0"></iframe>
   <div class="row" style="margin-top:5em">
     <div class="three columns" id="form_div">
       <%= form_for(@casket) do |f| %>
@@ -136,7 +137,7 @@
           <button id="confirm_img5" hidden="true" onClick="confirm_img_five()">Confirm</button>
         </div>
         <br>
-        <div id="div_submit">
+        <div id="div_submit" target="_parent">
         </div>
       <% end %>
     </div>
