--- a/app/views/shopping_carts/checkout.html.erb
+++ b/app/views/shopping_carts/checkout.html.erb
@@ -1,33 +1,310 @@
-<h1>Checkout</h1>
+<!DOCTYPE HTML>
+<!--
+  Helios by HTML5 UP
+  html5up.net | @n33co
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Design a Casket | FTH Memorial</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery.dropotron.min.js"></script>
+    <script src="/js/jquery.scrolly.min.js"></script>
+    <script src="/js/jquery.onvisible.min.js"></script>
+    <script src="/js/skel.min.js"></script>
+    <script src="/js/skel-layers.min.js"></script>
+    <script src="/js/init.js"></script>
+    <link rel="stylesheet" href="/css/style2.css" />
 
-<p>Review your order:</p>
-<table>
-  <tr>
-    <td>Item</td>
-    <td>Quantity</td> 
-    <td>Price</td>
-  </tr>
-  <% @items.each do |item| %>
-  <tr>
-    <td><%= item.item.name %></td>
-    <td><%= item.quantity %></td> 
-    <td><%=number_to_currency item.item.price %></td>
-  </tr>
-  <% end %>
-</table>
+    <style type="text/css">
+    li.tooltips {
+      position: relative;
+      display: inline;
+    }
+    li.tooltips span {
+      position: absolute;
+      width:140px;
+      color: #FFFFFF;
+      background: #000000;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      visibility: hidden;
+      border-radius: 6px;
+    }
+    li.tooltips span:after {
+      content: '';
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      margin-left: -8px;
+      width: 0; height: 0;
+      border-bottom: 8px solid #000000;
+      border-right: 8px solid transparent;
+      border-left: 8px solid transparent;
+    }
+    li:hover.tooltips span {
+      visibility: visible;
+      opacity: 0.8;
+      top: 30px;
+      left: 50%;
+      margin-left: -76px;
+      z-index: 999;
+    }
+    </style>
 
-<div><b>SubTotal:</b><%= number_to_currency @shopping_cart.subtotal %></div>
-<div><b>Taxes:</b><%= number_to_currency @shopping_cart.taxes %></div>
-<div><b>Total:</b><%= number_to_currency @shopping_cart.total %></div>
+    <noscript>
+      <link rel="stylesheet" href="/css/skel.css" />
+      <link rel="stylesheet" href="/css/style2.css" />
+      <link rel="stylesheet" href="/css/style-desktop.css" />
+      <link rel="stylesheet" href="/css/style-noscript.css" />
+    </noscript>
+    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+  </head>
+  <body class="left-sidebar">
 
-<%= link_to "Edit Cart", shopping_cart_path %>
-<p>All good? Fill out the form below to checkout</p>
-<%= form_for @order, url: finalize_order_path(:order => @order.id) do |f| %>
-  <!--<%= f.text_field :email, :placeholder => 'Email' %>
-	<%= f.submit "Submit Order for Processing" %>-->
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="FTH Purchase"
-          data-amount="<%= @cents.to_i %>"
-          ></script>
-<% end %>
+    <!-- Header -->
+      <div id="header">
+
+        <!-- Inner -->
+          <div class="inner">
+            <header>
+              <h1>Checkout</h1>
+            </header>
+          </div>
+        
+        <!-- Nav -->
+          <nav id="nav">
+            <ul>
+              <li><a href="/">Home</a></li>
+              
+            <!--  <li>
+                <a href="">Dropdown</a>
+                <ul>
+                  <li><a href="#">Lorem ipsum dolor</a></li>
+                  <li><a href="#">Magna phasellus</a></li>
+                  <li><a href="#">Etiam dolore nisl</a></li>
+                  <li>
+                    <a href="">And a submenu &hellip;</a>
+                    <ul>
+                      <li><a href="#">Lorem ipsum dolor</a></li>
+                      <li><a href="#">Phasellus consequat</a></li>
+                      <li><a href="#">Magna phasellus</a></li>
+                      <li><a href="#">Etiam dolore nisl</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Veroeros feugiat</a></li>
+                </ul>
+              </li> -->
+
+              <li><a href="/store">Shop</a></li>
+              <li><a href="#">Custom Caskets</a></li>
+              <li class="tooltips">Custom Tombstones<span>Coming Soon</span></li>
+              <li><a href="/">Shopping Cart (<%= @shopping_cart.shopping_cart_items.count %> items)</a></li>
+            </ul>
+          </nav>
+
+      </div>
+      
+    <!-- Main -->
+      <div class="wrapper style1" style="position: relative;
+    background-image: url('../images/header.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    text-align: center;
+    padding: 2.5em 0 2em 0;
+    margin-bottom: -5em;
+    cursor: default;">
+
+        <div class="container"  style="margin-left: auto; margin-right: auto; width:70%; background: #ededed; box-shadow: 0px 2px 15px #888888; border-radius: 0.4em;  height: 25em; overflow: scroll;">
+          <div class="" style="padding-top: 20px">
+            <section class="">  
+                <h1>Review your order:</h1>
+                <table>
+                  <tr>
+                    <td style="font-weight: bold">Item</td>
+                    <td style="font-weight: bold">Quantity</td> 
+                    <td style="font-weight: bold">Price</td>
+                  </tr>
+                  <% @items.each do |item| %>
+                  <tr>
+                    <td><%= item.item.name %></td>
+                    <td><%= item.quantity %></td> 
+                    <td><%=number_to_currency item.item.price %></td>
+                  </tr>
+                  <% end %>
+                </table>
+
+                <div><b>SubTotal:</b><%= number_to_currency @shopping_cart.subtotal %></div>
+                <div><b>Taxes:</b><%= number_to_currency @shopping_cart.taxes %></div>
+                <div><b>Total:</b><%= number_to_currency @shopping_cart.total %></div>
+
+                <%= link_to "Edit Cart", shopping_cart_path %>
+                <p style="text-align: center">All good? Fill out the form below to checkout</p>
+                <%= form_for @order, url: finalize_order_path(:order => @order.id) do |f| %>
+                  <!--<%= f.text_field :email, :placeholder => 'Email' %>
+                  <%= f.submit "Submit Order for Processing" %>-->
+                  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                          data-description="FTH Purchase"
+                          data-amount="<%= @cents.to_i %>"
+                          ></script>
+                <% end %>
+
+            </section>  
+            
+          </div>
+        </div>
+      </div>
+
+    <!-- Footer -->
+<!--      <div id="footer">
+        <div class="container">
+          <div class="row"> -->
+            
+            <!-- Tweets -->
+              <!-- <section class="4u">
+                <header>
+                  <h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
+                </header>
+                <ul class="divided">
+                  <li>
+                    <article class="tweet">
+                      Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
+                      <span class="timestamp">5 minutes ago</span>
+                    </article>
+                  </li>
+                  <li>
+                    <article class="tweet">
+                      Hendrerit rutrum quisque.
+                      <span class="timestamp">30 minutes ago</span>
+                    </article>
+                  </li>
+                  <li>
+                    <article class="tweet">
+                      Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
+                      <span class="timestamp">3 hours ago</span>
+                    </article>
+                  </li>
+                  <li>
+                    <article class="tweet">
+                      Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
+                      <span class="timestamp">5 hours ago</span>
+                    </article>
+                  </li>
+                </ul>
+              </section>
+ -->
+            <!-- Posts -->
+<!--              <section class="4u">
+                <header>
+                  <h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
+                </header>
+                <ul class="divided">
+                  <li>
+                    <article class="post stub">
+                      <header>
+                        <h3><a href="#">Nisl fermentum integer</a></h3>
+                      </header>
+                      <span class="timestamp">3 hours ago</span>
+                    </article>
+                  </li>
+                  <li>
+                    <article class="post stub">
+                      <header>
+                        <h3><a href="#">Phasellus portitor lorem</a></h3>
+                      </header>
+                      <span class="timestamp">6 hours ago</span>
+                    </article>
+                  </li>
+                  <li>
+                    <article class="post stub">
+                      <header>
+                        <h3><a href="#">Magna tempus consequat</a></h3>
+                      </header>
+                      <span class="timestamp">Yesterday</span>
+                    </article>
+                  </li>
+                  <li>
+                    <article class="post stub">
+                      <header>
+                        <h3><a href="#">Feugiat lorem ipsum</a></h3>
+                      </header>
+                      <span class="timestamp">2 days ago</span>
+                    </article>
+                  </li>
+                </ul>
+              </section> -->
+
+            <!-- Photos -->
+              <!-- <section class="4u">
+                <header>
+                  <h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
+                </header>
+                <div class="row quarter no-collapse">
+                  <div class="6u">
+                    <a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+                  </div>
+                  <div class="6u">
+                    <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+                  </div>
+                </div>
+                <div class="row quarter no-collapse">
+                  <div class="6u">
+                    <a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+                  </div>
+                  <div class="6u">
+                    <a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+                  </div>
+                </div>
+                <div class="row quarter no-collapse">
+                  <div class="6u">
+                    <a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+                  </div>
+                  <div class="6u">
+                    <a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
+                  </div>
+                </div>
+              </section> -->
+
+<!--          </div>
+          <hr />
+          <div class="row">
+            <div class="12u"> -->
+              
+              <!-- Contact -->
+                <!-- <section class="contact">
+                  <header>
+                    <h3>Nisl turpis nascetur interdum?</h3>
+                  </header>
+                  <p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+                  <ul class="icons">
+                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+                    <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+                    <li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+                  </ul>
+                </section>
+               -->
+              <!-- Copyright -->
+<!--                <div class="copyright">
+                  <ul class="menu">
+                    <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                  </ul>
+                </div>
+              
+            </div>
+          
+          </div>
+        </div>
+      </div> -->
+
+  </body>
+</html>
