--- a/app/views/caskets/new.html.erb
+++ b/app/views/caskets/new.html.erb
@@ -94,7 +94,7 @@
   <script type="text/javascript" src="/js/dragdrop.js"></script>
   <script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
-<body style="background-img:; font-family:'Source Sans Pro', sans-serif">
+<body style="background-color: ; font-family:'Source Sans Pro', sans-serif">
   <iframe src="/casket_maker" style="width:100%; height:4.7em;" frameborder="0"></iframe>
   <div class="row" style="margin-top:5em">
     <div class="three columns" id="form_div">
