--- a/app/views/caskets/new.html.erb
+++ b/app/views/caskets/new.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -94,12 +93,8 @@
   <script type="text/javascript" src="/js/dragdrop.js"></script>
   <script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
-<<<<<<< Updated upstream
 <body style="background-color: ; font-family:'Source Sans Pro', sans-serif">
   <iframe src="/casket_maker" style="width:100%; height:4.7em;" frameborder="0"></iframe>
-=======
-<body style="background-color: rgb(255, 255, 255); font-family:'Source Sans Pro', sans-serif">
->>>>>>> Stashed changes
   <div class="row" style="margin-top:5em">
     <div class="three columns" id="form_div">
       <%= form_for(@casket) do |f| %>
@@ -203,12 +198,16 @@
           </div>
         </div>
       </div>
-      <div class="row" style="margin-top:320px;">
+      <div class="row" style="margin-top:320px; height:500px;">
         <div class="twelve columns" id="images" ondrop="drop0(event)" ondragover="allowDrop(event)" style="margin-top:55px; height:300px;">
           <h1 hidden="true">Hidden</h1>     
         </div>
       </div>
     </div>
+  </div>
+  <div class="row" hidden="true">
+    <canvas id="rendered_img" style="margin-top:320px; height:1000px; width:1000px;">
+    </canvas>
   </div>
   </body>
 </html>
